<resources>
    <string name="app_name">InventoryApp</string>

    <string name="action_save">Save</string>

    <string name="edit_section">Add new product</string>

    <string name="hint_product_name">Product name</string>

    <string name="hint_price">Price</string>

    <string name="hint_quantity">Quantity</string>

    <string name="hint_supplier_name">Supplier Name</string>

    <string name="hint_phone_number">Supplier Phone Number</string>

    <string name="title_overview">Overview</string>
</resources>


