<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            style="@style/SectionHeadlineStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:text="@string/edit_section" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_margin">

            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_quantity"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="textCapWords" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_overview"
            style="@style/SectionHeadlineStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:text="@string/title_overview" />

        <TextView
            android:id="@+id/text_view_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            tools:text="Test\nMy\nTextView" />

    </LinearLayout>
</ScrollView>